infra/k8s/components/base/ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.entrypoints: "web,websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - dalthonmh.space
      secretName: letsencrypt-prod
  rules:
    - host: dalthonmh.space
      http:
        paths:
          - path: /api/auth/
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8080
          - path: /api/tasks/
            pathType: Prefix
            backend:
              service:
                name: core
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
